fixed alignment

--- a/styles/base.css
+++ b/styles/base.css
@@ -116,13 +116,10 @@ a[href^='#']:hover {
 /* Header and Navigation Bar Styling */
 
 header {
+  text-align: center;
+
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   width: 100%;
-
-}
-
-header * {
-  text-align: center;
 
 }
 
